--- a/polybar/config
+++ b/polybar/config
@@ -1,8 +1,6 @@
 [colors]
-;background = ${xrdb:color0:#222}
 background = #222
 background-alt = #444
-;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
 foreground-alt = #ffffff
 primary = #ffb52a
@@ -10,13 +8,10 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/example]
-;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 height = 27
-;offset-x = 1%
-;offset-y = 1%
-radius = 6.0
-fixed-center = false
+radius = 1.0
+fixed-center = true 
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -33,53 +28,34 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = DejavuSans:pixelsize=12;1
+font-0 = Work Sans:size=14;0
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 font-3 = Material Icons:style=Regular:size=14;3
 font-4 = FontAwesome 5 Free:size=12:style=Solid;0
 font-5 = JetBrainsMono Nerd Font Mono:style=Mono:size=12;0 
 
-modules-left = alsa wlan xkeyboard
+modules-left = alsa wlan xkeyboard kernel
 modules-center = i3
-modules-right = memory cpu temperature battery date
+modules-right = cpu temperature battery date
 
-tray-position = right
-tray-padding = 2
-;tray-background = #0063ff
-
-;wm-restack = bspwm
-;wm-restack = i3
-
-;override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
 
 cursor-click = pointer
 cursor-scroll = ns-resize
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:30:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = "ÓâØ "
+format-prefix = "âØ "
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.secondary}
 
 label-layout = %layout%
-label-layout-underline = ${colors.secondary}
 
 label-indicator-padding = 2
 label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
+label-indicator-background = #ad0505
 label-indicator-underline = ${colors.secondary}
 
 
@@ -118,7 +94,7 @@ label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
 ; Separator in between workspaces
-; label-separator = |
+label-separator = |
 
 
 [module/mpd]
@@ -158,21 +134,11 @@ card = intel_backlight
 
 [module/cpu]
 type = internal/cpu
-label-font = 6
 interval = 1
 format-prefix = "Óå¢ø"
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #f90000
 label = %percentage:2%%
-
-[module/memory]
-type = internal/memory
-label-font = 6
-interval = 1
-format-prefix = "Ôî∏ "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
-label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
@@ -181,7 +147,7 @@ interval = 1.0
 
 format-connected = <label-connected>
 format-connected-underline = #9f78e1
-label-connected = ±%essid%
+label-connected = %essid%
 
 format-disconnected = ÔÄë
 ;format-disconnected = <label-disconnected>
@@ -196,25 +162,8 @@ ramp-signal-3 = Óàö
 ramp-signal-4 = Óàö
 ramp-signal-foreground = ${colors.foreground-alt}
 
-[module/eth]
-type = internal/network
-interface = net0
-interval = 3.0
-
-format-connected-underline = #55aa55
-format-connected-prefix = "ÓÜú "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
-
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
 [module/date]
 type = internal/date
-label-font = 1
 interval = 5
 
 date =
@@ -229,42 +178,14 @@ format-underline = #0a6cf5
 
 label = %date% %time%
 
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
-label-volume-foreground = ${root.foreground}
-
-label-muted = üîá muted
-label-muted-foreground = #666
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ‚îÄ
-bar-volume-fill-font = 2
-bar-volume-empty = ‚îÄ
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
-
 [module/alsa]
 type = internal/alsa
 
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL
-label-volume-foreground = ${root.foreground}
+label-volume-foreground = #cfc0c0
 
 format-muted-prefix = ""
-format-muted-foreground = ${colors.foreground-alt}
+format-muted-foreground = #bf2c2c
 label-muted = Ôö©
 
 bar-volume-width = 10
@@ -282,7 +203,7 @@ bar-volume-fill = ‚îÄ
 bar-volume-fill-font = 2
 bar-volume-empty = ‚îÄ
 bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+bar-volume-empty-foreground = #403c3c
 
 [module/battery]
 type = internal/battery
@@ -296,10 +217,12 @@ format-charging-underline = #ffb52a
 format-discharging = <animation-discharging> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = "ÔâÄ "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
+; øøøøøøøøø øøøøøø øøø øøøøøøøøøø øøøøøøøø
+;format-full-prefix = "ÔâÄ "
+;format-full-prefix-foreground = ${colors.foreground-alt}
+;format-full-underline = ${self.format-charging-underline}
 
+label-full = ""
 ramp-capacity-0 = Óà∂
 ramp-capacity-1 = Óà∑
 ramp-capacity-2 = Óà∏
@@ -319,7 +242,6 @@ animation-discharging-framerate = 750
 
 [module/temperature]
 type = internal/temperature
-label-font = 6
 thermal-zone = 0 
 warn-temperature = 75
 
@@ -339,34 +261,9 @@ ramp-3 = Ôãà
 ramp-4 = Ôãá
 ramp-foreground = ${colors.foreground-alt}
 
-[module/powermenu]
-type = custom/menu
-
-expand-right = true
-
-format-spacing = 1
-
-label-open = ÓÑå
-label-open-foreground = ${colors.secondary}
-label-close = ÓÅ• cancel
-label-close-foreground = ${colors.secondary}
-label-separator = |
-label-separator-foreground = ${colors.foreground-alt}
-
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = power off
-menu-0-1-exec = menu-open-2
-
-menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
-
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
+[module/kernel]
+type = custom/script
+exec = exec ~/.config/polybar/python/kernel.py 
 
 [settings]
 screenchange-reload = true
